{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 100,
  "lineage": "4094bcf3-d516-f6ea-88ec-11eb6d2281a8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463028695216:internet-gateway/igw-08ea78996e62cfa61",
            "id": "igw-08ea78996e62cfa61",
            "owner_id": "463028695216",
            "tags": {
              "Name": "devvpc1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "devvpc1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f442bbb39947aaa1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08ea78996e62cfa61",
            "id": "r-rtb-0e645ce020e2002d31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e645ce020e2002d3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463028695216:route-table/rtb-0fa9381e94e8caacf",
            "id": "rtb-0fa9381e94e8caacf",
            "owner_id": "463028695216",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devvpc1-private-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "devvpc1-private-ap-south-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f442bbb39947aaa1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463028695216:route-table/rtb-0f29c3773e0466113",
            "id": "rtb-0f29c3773e0466113",
            "owner_id": "463028695216",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devvpc1-private-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "devvpc1-private-ap-south-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f442bbb39947aaa1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463028695216:route-table/rtb-0cd8d3183589c8119",
            "id": "rtb-0cd8d3183589c8119",
            "owner_id": "463028695216",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devvpc1-private-ap-south-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "devvpc1-private-ap-south-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f442bbb39947aaa1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463028695216:route-table/rtb-0e645ce020e2002d3",
            "id": "rtb-0e645ce020e2002d3",
            "owner_id": "463028695216",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devvpc1-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "devvpc1-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f442bbb39947aaa1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039603b3c853d44ff",
            "route_table_id": "rtb-0fa9381e94e8caacf",
            "subnet_id": "subnet-0608f652aed47d6be"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9cc81f3aee15d7c",
            "route_table_id": "rtb-0f29c3773e0466113",
            "subnet_id": "subnet-08ae76f0a11639e8f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c7e85414185bac3",
            "route_table_id": "rtb-0cd8d3183589c8119",
            "subnet_id": "subnet-003fb9b37def79cac"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037d9be68280a2c1b",
            "route_table_id": "rtb-0e645ce020e2002d3",
            "subnet_id": "subnet-0f4cbbc4d81178ce2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0400cdf3dffcc59bb",
            "route_table_id": "rtb-0e645ce020e2002d3",
            "subnet_id": "subnet-0b327eda9aa983313"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0330ad6b20d7beb7e",
            "route_table_id": "rtb-0e645ce020e2002d3",
            "subnet_id": "subnet-0fc3fd782c57ce3ed"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463028695216:subnet/subnet-0608f652aed47d6be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0608f652aed47d6be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463028695216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devvpc1-private-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "devvpc1-private-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f442bbb39947aaa1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463028695216:subnet/subnet-08ae76f0a11639e8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.8.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ae76f0a11639e8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463028695216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devvpc1-private-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "devvpc1-private-ap-south-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f442bbb39947aaa1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463028695216:subnet/subnet-003fb9b37def79cac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.16.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003fb9b37def79cac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463028695216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devvpc1-private-ap-south-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "devvpc1-private-ap-south-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f442bbb39947aaa1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463028695216:subnet/subnet-0f4cbbc4d81178ce2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.24.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4cbbc4d81178ce2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "463028695216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devvpc1-public-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "devvpc1-public-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f442bbb39947aaa1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463028695216:subnet/subnet-0b327eda9aa983313",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.25.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b327eda9aa983313",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "463028695216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devvpc1-public-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "devvpc1-public-ap-south-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f442bbb39947aaa1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463028695216:subnet/subnet-0fc3fd782c57ce3ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.26.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc3fd782c57ce3ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "463028695216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devvpc1-public-ap-south-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "devvpc1-public-ap-south-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f442bbb39947aaa1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463028695216:vpc/vpc-0f442bbb39947aaa1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0443dcb31703996da",
            "default_route_table_id": "rtb-023d6e518987e8dc3",
            "default_security_group_id": "sg-0c4445314257f0671",
            "dhcp_options_id": "dopt-9ce91ff7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f442bbb39947aaa1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023d6e518987e8dc3",
            "owner_id": "463028695216",
            "tags": {
              "Name": "devvpc1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "devvpc1",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}